// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetPage should render a native asset 1`] = `
<div>
  <div
    class="mm-box asset__content mm-box--margin-top-4 mm-box--margin-right-auto mm-box--margin-left-auto"
  >
    <div
      class="mm-box mm-box--padding-top-1 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--margin-right-1 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-left-4"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
        data-testid="asset-name"
      >
        TEST
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--rounded-lg"
    >
      <div
        class="mm-box mm-box--margin-right-4 mm-box--margin-left-4"
      >
        <h1
          class="mm-box mm-text mm-text--display-md mm-text--font-weight-medium mm-box--margin-bottom-1 mm-box--color-text-default mm-box--rounded-lg"
          data-testid="asset-hovered-price"
          style="opacity: 0.2;"
        >
          $123.00
        </h1>
        <div
          class="mm-box mm-skeleton mm-box--background-color-icon-alternative mm-box--rounded-lg"
          style="width: 33%;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          >
             
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-4 mm-box--display-flex mm-box--flex-direction-column mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="asset-price-chart"
      >
        <div
          class="mm-box asset-chart__empty-or-loading-state-container"
          data-testid="asset-chart-loading"
        >
          <div
            class="mm-box mm-skeleton asset-chart__skeleton mm-box--background-color-icon-alternative mm-box--rounded-lg"
          />
        </div>
        <div
          class="mm-box mm-box--margin-top-2 mm-box--margin-right-3 mm-box--margin-left-3 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button time-range-button__selected mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1D
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1W
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1M
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            3M
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1Y
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            All
          </button>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--margin-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-3 mm-box--justify-content-space-between mm-box--width-full"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button coin-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="coin-overview-buy"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
              style="mask-image: url('./images/icons/plus-and-minus.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Buy/Sell
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md mm-button-base--disabled icon-button coin-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="token-overview-button-swap"
          disabled=""
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
              style="mask-image: url('./images/icons/swap-horizontal.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Swap
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button coin-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="coin-overview-bridge"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
              style="mask-image: url('./images/icons/bridge.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Bridge
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button coin-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="coin-overview-send"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
              style="mask-image: url('./images/icons/arrow-2-up-right.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Send
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button coin-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="coin-overview-receive"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-default"
              style="mask-image: url('./images/icons/scan-barcode.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Receive
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-top-3 mm-box--display-flex mm-box--flex-direction-column"
    >
      <h4
        class="mm-box mm-text mm-text--heading-sm mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-left-4 mm-box--color-text-default"
      >
        Your balance
      </h4>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
      >
        <a
          class="mm-box mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
          data-testid="multichain-token-list-button"
          style="height: 62px; cursor: auto; background-color: transparent; transition: background-color 0.2s ease-in-out;"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--margin-right-4 mm-box--display-inline-block"
            style="align-self: center;"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-full"
            >
              <img
                alt="static-logo"
                class="mm-avatar-token__token-image"
                src="./images/eth_logo.svg"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
              >
                <img
                  alt="static-logo"
                  class="mm-avatar-network__network-image"
                  src="./images/eth_logo.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
            style="flex-grow: 1; overflow: hidden;"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
            >
              <div
                class="mm-box mm-box--display-flex"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
                  data-testid="multichain-token-list-item-token-name"
                >
                  TEST
                </p>
                <button
                  class="mm-box mm-box--padding-inline-0 mm-box--padding-inline-start-1 mm-box--padding-inline-end-1 mm-box--gap-1 mm-box--background-color-transparent"
                  data-testid="staking-entrypoint-0x1"
                  tabindex="0"
                >
                  <span
                    class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
                  >
                    •
                  </span>
                  <span
                    class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--padding-inline-start-1 mm-box--padding-inline-end-1 mm-box--color-primary-default"
                  >
                    Earn
                  </span>
                  <span
                    class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-primary-default"
                    style="mask-image: url('./images/icons/stake.svg');"
                  />
                </button>
              </div>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-end mm-box--color-text-default"
                data-testid="multichain-token-list-item-secondary-value"
                style="white-space: nowrap; padding-inline-start: 8px;"
              >
                $0.00
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-success-default"
                  style="mask-image: url('./images/icons/triangle-up.svg');"
                />
                <p
                  class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
                  data-testid="token-increase-decrease-percentage-0x0000000000000000000000000000000000000000"
                />
              </div>
              <p
                class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
                data-testid="multichain-token-list-item-value"
              >
                0
                 
                TEST
              </p>
            </div>
          </div>
        </a>
      </div>
      <div
        class="mm-box mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
        style="height: 1px; border-bottom-width: 0;"
      />
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-column"
        >
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-bottom-2 mm-box--color-text-default"
          >
            Token details
          </h4>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Network
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-text-default"
                  data-testid="asset-network"
                >
                  <div
                    class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                  >
                    <img
                      alt="static-logo"
                      class="mm-avatar-network__network-image"
                      src="./images/eth_logo.svg"
                    />
                  </div>
                  Ethereum Mainnet
                </p>
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Spending caps
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
              >
                <a
                  class="mm-box mm-text mm-button-base asset-page__spending-caps mm-text--body-md-medium mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://portfolio.test/?metamaskEntry=asset_page&metametricsId=&metricsEnabled=false&marketingEnabled=false&accountAddress=cf8dace4-9439-4bd4-b3a8-88c821c8fcb3&tab=spending-caps"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Edit in Portfolio
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
          style="height: 1px; border-bottom-width: 0;"
        />
        <div
          class="mm-box mm-box--margin-bottom-4"
        >
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-inline-4 mm-box--color-text-default"
          >
            Your activity
          </h4>
          <div
            class="mm-box ramps-card ramps-card-activity mm-box--margin-2 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--rounded-lg"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <h4
                class="mm-box mm-text ramps-card__title mm-text--heading-sm mm-box--color-text-default"
              >
                Tips for using a wallet
              </h4>
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-info-inverse mm-box--background-color-transparent mm-box--rounded-lg"
                data-testid="ramp-card-close-btn"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
            <p
              class="mm-box mm-text ramps-card__body mm-text--body-md mm-box--color-text-default"
            >
              Adding tokens unlocks more ways to use web3.
            </p>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md ramps-card__cta-button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
            >
              Token marketplace
            </button>
          </div>
          <div
            class="mm-box transaction-list"
          >
            <div
              class="mm-box nfts-tab__link mm-box--margin-top-12 mm-box--margin-bottom-12 mm-box--padding-top-6 mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-text--text-align-center mm-box--color-text-alternative"
              >
                No activity yet
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetPage should render an ERC20 asset without prices 1`] = `
<div>
  <div
    class="mm-box asset__content mm-box--margin-top-4 mm-box--margin-right-auto mm-box--margin-left-auto"
  >
    <div
      class="mm-box mm-box--padding-top-1 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--margin-right-1 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-left-4"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
        data-testid="asset-name"
      >
        TEST
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--rounded-lg"
    >
      <div
        class="mm-box mm-box--margin-right-4 mm-box--margin-left-4"
      >
        <div
          class="mm-box mm-skeleton mm-box--margin-bottom-1 mm-box--background-color-icon-alternative mm-box--rounded-lg"
          style="width: 25%;"
        >
          <h1
            class="mm-box mm-text mm-text--display-md mm-box--color-text-default"
          >
             
          </h1>
        </div>
        <div
          class="mm-box mm-skeleton mm-box--background-color-icon-alternative mm-box--rounded-lg"
          style="width: 33%;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          >
             
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-4 mm-box--display-flex mm-box--flex-direction-column mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="asset-price-chart"
      >
        <div
          class="mm-box asset-chart__empty-or-loading-state-container"
          data-testid="asset-chart-loading"
        >
          <div
            class="mm-box mm-skeleton asset-chart__skeleton mm-box--background-color-icon-alternative mm-box--rounded-lg"
          />
        </div>
        <div
          class="mm-box mm-box--margin-top-2 mm-box--margin-right-3 mm-box--margin-left-3 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button time-range-button__selected mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1D
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1W
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1M
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            3M
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1Y
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            All
          </button>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--margin-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-3 mm-box--justify-content-space-evenly"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="token-overview-buy"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/money.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Buy/Sell
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="eth-overview-send"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/send.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Send
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="eth-overview-swap"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/swap-horizontal.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Swap
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="token-overview-bridge"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/bridge.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Bridge
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-top-3 mm-box--display-flex mm-box--flex-direction-column"
    >
      <h4
        class="mm-box mm-text mm-text--heading-sm mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-left-4 mm-box--color-text-default"
      >
        Your balance
      </h4>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
      >
        <a
          class="mm-box mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
          data-testid="multichain-token-list-button"
          style="height: 62px; cursor: auto; background-color: transparent; transition: background-color 0.2s ease-in-out;"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--margin-right-4 mm-box--display-inline-block"
            style="align-self: center;"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-full"
            >
              T
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
              >
                <img
                  alt="static-logo"
                  class="mm-avatar-network__network-image"
                  src="./images/eth_logo.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
            style="flex-grow: 1; overflow: hidden;"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
            >
              <div
                class="mm-box mm-box--display-flex"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
                  data-testid="multichain-token-list-item-token-name"
                >
                  TEST
                </p>
              </div>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--text-align-end mm-box--color-text-default"
                data-testid="multichain-token-list-item-secondary-value"
                style="white-space: nowrap; padding-inline-start: 8px;"
              >
                $0.00
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-success-default"
                  style="mask-image: url('./images/icons/triangle-up.svg');"
                />
                <p
                  class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
                  data-testid="token-increase-decrease-percentage-0x309375769E79382beFDEc5bdab51063AeBDC4936"
                />
              </div>
              <p
                class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
                data-testid="multichain-token-list-item-value"
              >
                0
                 
                TEST
              </p>
            </div>
          </div>
        </a>
      </div>
      <div
        class="mm-box mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
        style="height: 1px; border-bottom-width: 0;"
      />
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-column"
        >
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-bottom-2 mm-box--color-text-default"
          >
            Token details
          </h4>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Network
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-text-default"
                  data-testid="asset-network"
                >
                  <div
                    class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                  >
                    <img
                      alt="static-logo"
                      class="mm-avatar-network__network-image"
                      src="./images/eth_logo.svg"
                    />
                  </div>
                  Ethereum Mainnet
                </p>
              </p>
            </div>
            <div
              class="mm-box"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
              >
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
                >
                  Contract address
                </p>
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                >
                  <div>
                    <div
                      aria-describedby="static-tooltip-id"
                      class=""
                      data-original-title="Copy to clipboard"
                      data-tooltipped=""
                      style="display: inline;"
                      tabindex="0"
                    >
                      <button
                        class="mm-box mm-text mm-button-base mm-button-base--size-sm multichain-address-copy-button mm-text--body-sm mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-pill"
                        data-testid="address-copy-button-text"
                      >
                        <span
                          class="mm-box mm-text mm-text--inherit mm-box--color-primary-default"
                        >
                          <div
                            class="mm-box mm-box--display-flex"
                          >
                            0x30937...C4936
                          </div>
                        </span>
                        <span
                          class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                          style="mask-image: url('./images/icons/copy.svg');"
                        />
                      </button>
                    </div>
                  </div>
                </p>
              </div>
              <div
                class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
                  >
                    Token decimal
                  </p>
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                  >
                    <p
                      class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                    >
                      18
                    </p>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Spending caps
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
              >
                <a
                  class="mm-box mm-text mm-button-base asset-page__spending-caps mm-text--body-md-medium mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://portfolio.test/?metamaskEntry=asset_page&metametricsId=&metricsEnabled=false&marketingEnabled=false&accountAddress=cf8dace4-9439-4bd4-b3a8-88c821c8fcb3&tab=spending-caps"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Edit in Portfolio
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
          style="height: 1px; border-bottom-width: 0;"
        />
        <div
          class="mm-box mm-box--margin-bottom-4"
        >
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-inline-4 mm-box--color-text-default"
          >
            Your activity
          </h4>
          <div
            class="mm-box ramps-card ramps-card-activity mm-box--margin-2 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--rounded-lg"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <h4
                class="mm-box mm-text ramps-card__title mm-text--heading-sm mm-box--color-text-default"
              >
                Tips for using a wallet
              </h4>
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-info-inverse mm-box--background-color-transparent mm-box--rounded-lg"
                data-testid="ramp-card-close-btn"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
            <p
              class="mm-box mm-text ramps-card__body mm-text--body-md mm-box--color-text-default"
            >
              Adding tokens unlocks more ways to use web3.
            </p>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md ramps-card__cta-button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
            >
              Token marketplace
            </button>
          </div>
          <div
            class="mm-box transaction-list"
          >
            <div
              class="mm-box nfts-tab__link mm-box--margin-top-12 mm-box--margin-bottom-12 mm-box--padding-top-6 mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-text--text-align-center mm-box--color-text-alternative"
              >
                No activity yet
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetPage should render an ERC20 token with prices 1`] = `
<div>
  <div
    class="mm-box asset__content mm-box--margin-top-4 mm-box--margin-right-auto mm-box--margin-left-auto"
  >
    <div
      class="mm-box mm-box--padding-top-1 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--margin-right-1 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-left-4"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
        data-testid="asset-name"
      >
        TEST
      </p>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--rounded-lg"
    >
      <div
        class="mm-box mm-box--margin-right-4 mm-box--margin-left-4"
      >
        <h1
          class="mm-box mm-text mm-text--display-md mm-text--font-weight-medium mm-box--margin-bottom-1 mm-box--color-text-default mm-box--rounded-lg"
          data-testid="asset-hovered-price"
          style="opacity: 0.2;"
        >
          $15,129.00
        </h1>
        <div
          class="mm-box mm-skeleton mm-box--background-color-icon-alternative mm-box--rounded-lg"
          style="width: 33%;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
          >
             
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-top-4 mm-box--display-flex mm-box--flex-direction-column mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="asset-price-chart"
      >
        <div
          class="mm-box asset-chart__empty-or-loading-state-container"
          data-testid="asset-chart-loading"
        >
          <div
            class="mm-box mm-skeleton asset-chart__skeleton mm-box--background-color-icon-alternative mm-box--rounded-lg"
          />
        </div>
        <div
          class="mm-box mm-box--margin-top-2 mm-box--margin-right-3 mm-box--margin-left-3 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button time-range-button__selected mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1D
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1W
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1M
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            3M
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            1Y
          </button>
          <button
            class="mm-box mm-text mm-button-base mm-button-base--size-sm time-range-button mm-text--body-xs-medium mm-box--padding-0 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-alternative mm-box--background-color-transparent mm-box--rounded-xl"
          >
            All
          </button>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--margin-top-4 mm-box--padding-right-4 mm-box--padding-left-4"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-3 mm-box--justify-content-space-evenly"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="token-overview-buy"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/money.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Buy/Sell
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="eth-overview-send"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/send.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Send
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="eth-overview-swap"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/swap-horizontal.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Swap
            </span>
          </span>
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-md icon-button token-overview__button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-right-2 mm-box--padding-bottom-3 mm-box--padding-left-2 mm-box--display-inline-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-xl"
          data-testid="token-overview-bridge"
        >
          <span
            class="mm-box mm-text icon-button__label mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
          >
            <span
              class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/bridge.svg');"
            />
            <span
              class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--display-block mm-box--color-text-default"
              style="margin-top: -4px;"
            >
              Bridge
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-top-3 mm-box--display-flex mm-box--flex-direction-column"
    >
      <h4
        class="mm-box mm-text mm-text--heading-sm mm-box--padding-top-1 mm-box--padding-bottom-1 mm-box--padding-left-4 mm-box--color-text-default"
      >
        Your balance
      </h4>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full mm-box--height-full"
      >
        <a
          class="mm-box mm-box--padding-top-2 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-row mm-box--width-full"
          data-testid="multichain-token-list-button"
          style="height: 62px; cursor: auto; background-color: transparent; transition: background-color 0.2s ease-in-out;"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--margin-right-4 mm-box--display-inline-block"
            style="align-self: center;"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-token mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-full"
            >
              T
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--rectangular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-section mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
              >
                <img
                  alt="static-logo"
                  class="mm-avatar-network__network-image"
                  src="./images/eth_logo.svg"
                />
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--width-full"
            style="flex-grow: 1; overflow: hidden;"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
            >
              <div
                class="mm-box mm-box--display-flex"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--ellipsis mm-box--color-text-default"
                  data-testid="multichain-token-list-item-token-name"
                >
                  TEST
                </p>
              </div>
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-text--text-align-end mm-box--color-text-default"
                data-testid="multichain-token-list-item-secondary-value"
                style="white-space: nowrap; padding-inline-start: 8px;"
              >
                $0.00
              </p>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-success-default"
                  style="mask-image: url('./images/icons/triangle-up.svg');"
                />
                <p
                  class="mm-box mm-text mm-text--body-sm-medium mm-text--ellipsis mm-box--color-text-alternative"
                  data-testid="token-increase-decrease-percentage-0xe4246B1Ac0Ba6839d9efA41a8A30AE3007185f55"
                />
              </div>
              <p
                class="mm-box mm-text mm-text--body-sm-medium mm-text--text-align-end mm-box--color-text-alternative"
                data-testid="multichain-token-list-item-value"
              >
                0
                 
                TEST
              </p>
            </div>
          </div>
        </a>
      </div>
      <div
        class="mm-box mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
        style="height: 1px; border-bottom-width: 0;"
      />
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-column"
        >
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-bottom-2 mm-box--color-text-default"
          >
            Token details
          </h4>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Network
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
              >
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--display-flex mm-box--gap-2 mm-box--align-items-center mm-box--color-text-default"
                  data-testid="asset-network"
                >
                  <div
                    class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                  >
                    <img
                      alt="static-logo"
                      class="mm-avatar-network__network-image"
                      src="./images/eth_logo.svg"
                    />
                  </div>
                  Ethereum Mainnet
                </p>
              </p>
            </div>
            <div
              class="mm-box"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
              >
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
                >
                  Contract address
                </p>
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                >
                  <div>
                    <div
                      aria-describedby="static-tooltip-id"
                      class=""
                      data-original-title="Copy to clipboard"
                      data-tooltipped=""
                      style="display: inline;"
                      tabindex="0"
                    >
                      <button
                        class="mm-box mm-text mm-button-base mm-button-base--size-sm multichain-address-copy-button mm-text--body-sm mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-pill"
                        data-testid="address-copy-button-text"
                      >
                        <span
                          class="mm-box mm-text mm-text--inherit mm-box--color-primary-default"
                        >
                          <div
                            class="mm-box mm-box--display-flex"
                          >
                            0xe4246...85f55
                          </div>
                        </span>
                        <span
                          class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-start-1 mm-box--display-inline-block mm-box--color-inherit"
                          style="mask-image: url('./images/icons/copy.svg');"
                        />
                      </button>
                    </div>
                  </div>
                </p>
              </div>
              <div
                class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
                  >
                    Token decimal
                  </p>
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                  >
                    <p
                      class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                    >
                      18
                    </p>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Spending caps
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
              >
                <a
                  class="mm-box mm-text mm-button-base asset-page__spending-caps mm-text--body-md-medium mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://portfolio.test/?metamaskEntry=asset_page&metametricsId=&metricsEnabled=false&marketingEnabled=false&accountAddress=cf8dace4-9439-4bd4-b3a8-88c821c8fcb3&tab=spending-caps"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Edit in Portfolio
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--margin-bottom-2 mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
            style="height: 1px; border-bottom-width: 0;"
          />
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-top-2 mm-box--padding-bottom-2 mm-box--padding-inline-4 mm-box--color-text-default"
          >
            Market details
          </h4>
          <div
            class="mm-box mm-box--padding-inline-4 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
              >
                Market cap
              </p>
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
                data-testid="asset-market-cap"
              >
                56088.00
              </p>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--margin-inline-4 mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
          style="height: 1px; border-bottom-width: 0;"
        />
        <div
          class="mm-box mm-box--margin-bottom-4"
        >
          <h4
            class="mm-box mm-text mm-text--heading-sm mm-box--padding-inline-4 mm-box--color-text-default"
          >
            Your activity
          </h4>
          <div
            class="mm-box ramps-card ramps-card-activity mm-box--margin-2 mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--rounded-lg"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
            >
              <h4
                class="mm-box mm-text ramps-card__title mm-text--heading-sm mm-box--color-text-default"
              >
                Tips for using a wallet
              </h4>
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-info-inverse mm-box--background-color-transparent mm-box--rounded-lg"
                data-testid="ramp-card-close-btn"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
            <p
              class="mm-box mm-text ramps-card__body mm-text--body-md mm-box--color-text-default"
            >
              Adding tokens unlocks more ways to use web3.
            </p>
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-md ramps-card__cta-button mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
            >
              Token marketplace
            </button>
          </div>
          <div
            class="mm-box transaction-list"
          >
            <div
              class="mm-box nfts-tab__link mm-box--margin-top-12 mm-box--margin-bottom-12 mm-box--padding-top-6 mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-text--text-align-center mm-box--color-text-alternative"
              >
                No activity yet
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
